testsuite/bsc.interra/preprocessorTestcases/define/Define_RecursiveDefine.bsv.bsc-out.expected
checking package dependencies
Warning: "Define_RecursiveDefine.bsv", line 5, column 9: (S0001)
  File name `Define_RecursiveDefine.bsv' does not match package name `Design'
compiling Define_RecursiveDefine.bsv
Error: "Define_RecursiveDefine.bsv", line 9, column 17: (T0004)
  Unbound variable `max_val'
